fix alignments

--- a/src/frontend/src/styles/_mixins.scss
+++ b/src/frontend/src/styles/_mixins.scss
@@ -14,4 +14,7 @@
 @mixin wrap-text() {
     overflow-wrap: break-word;
     hyphens: auto;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
